# ebook_reader

./: .gitignore  Cargo.toml  README.org  TODO.org  book.txt  flake.nix  justfile
lib/: Cargo.toml
lib/src/: lib.rs
src/: _streamer.rs  config.rs  error.rs  logger.rs  main.rs  render.rs  renderizer.rs  tts.rs  utils.rs
src/_streamer/: fifo.rs
src/streamer/: utils.rs
src/tts/: _wav.rs  url.rs
